k8s/service.yaml
ClusterIPapiVersion: v1
kind: Service
metadata:
  name: gradify-academy-service
  labels:
    app: gradify-academy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: gradify-academy
